--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-# This is a basic workflow to help you get started with Actions
+ # This is a basic workflow to help you get started with Actions
 
 name: CI-CD
 
@@ -7,34 +7,32 @@ on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
-  
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-      CI:
-      runs-on: ubuntu-latest
+ CI:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
 
- 
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    steps:
       - uses: actions/checkout@v3
-
-      - name: Docker Login
- 
-      uses: docker/login-action@v2.0.0
-      with:
-    
-        username: ${{secrets.DOCKERHUB_USER}}
-        password: ${{secrets.DOCKERHUB_PWD}}
-    
-     - name: Build and push Docker images
-        uses: docker/build-push-action@v3.1.1
+      
+      - name: Autenticando o usuário no Docker
+        uses: docker/login-action@v2.0.0
         with:
-          file: ./src/DockerFile
+          username: ${{secrets.DOCKERHUB_USER}}
+          password: ${{secrets.DOCKERHUB_PWD}}
+          
+      - name: Construindo a imagem e enviando para o Docker Hub
+        uses: docker/build-push-action@v3.0.0
+        with:
+          file: ./src/Dockerfile
           context: ./src
           push: true
-          tags: |
+          tags: | 
             theeedu/kube-news:latest
-            theeedu/kube-news: ${{github.run_number}}
+            theeedu/kube-news:${{github.run_number}}
