alteracao de barra

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,8 @@ jobs:
       - name: Construindo a imagem e enviando para o Docker Hub
         uses: docker/build-push-action@v3.0.0
         with:
-          file: ./src/Dockerfile
-          context: ./src
+          file: src/Dockerfile
+          context: src
           push: true
           tags: | 
             theeedu/kube-news:latest
