alteracao de barra

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,4 @@ jobs:
           context: src
           push: true
           tags:
-            theeedu/kube-news:${{github.run_number}}
+            theeedu/kube-news:latest
