--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,4 @@ jobs:
           context: src
           push: true
           tags:
-            theeedu/kube-news:latest
+            theedu/kube-news:latest
