--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,3 +35,4 @@ jobs:
           push: true
           tags:
             theedu/kube-news:latest
+            theedu/kube-news:${{github.run_number}}
