--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
- CI:
+  CI:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -30,8 +30,26 @@ jobs:
       - name: Construindo a imagem e enviando para o Docker Hub
         uses: docker/build-push-action@v3.0.0
         with:
-          file: src/Dockerfile
-          context: src
+          file: ./src/Dockerfile
+          context: ./src
           push: true
-          tags:
+          tags: 
             theedu/kube-news:${{github.run_number}}
+  CD:
+    runs-on: ubuntu-latest
+    needs: [CI]
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Definindo o Kube config
+        uses: Azure/k8s-set-context@v2
+        with:
+          method: kubeconfig
+          kubeconfig: ${{secrets.K8S_CONFIG}}
+        
+      - name: Efetuando o deploy no ambiente de teste
+        uses: Azure/k8s-deploy@v3.1
+        with:
+          images: theedu/kube-news:${{github.run_number}}
+          manifests: 
+            k8s/deployment.yaml
