--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,4 +1,3 @@
-# Deployment do Postgres
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -10,12 +9,12 @@ spec:
   template:
     metadata:
       labels:
-        app: postgre 
+        app: postgre
     spec:
       containers:
         - name: postgre
           image: postgres:14.3
-          ports: 
+          ports:
             - containerPort: 5432
           env:
           - name: POSTGRES_PASSWORD
@@ -24,10 +23,7 @@ spec:
             value: "kubenews"
           - name: POSTGRES_DB
             value: "kubenews"
-
 ---
-
-
 apiVersion: v1
 kind: Service
 metadata:
@@ -36,42 +32,41 @@ spec:
   selector:
     app: postgre
   ports:
-  - port: 5432
+  - port: 5432 
     targetPort: 5432
-
 ---
-
-
 apiVersion: apps/v1
-kind: Deployment 
+kind: Deployment
 metadata:
   name: kubenews
 spec:
-  replicas: 20
-  selector: 
+  replicas: 1
+  selector:
     matchLabels:
-      app: kubenews 
+      app: kubenews
   template:
     metadata:
       labels:
-        app: kubenews 
+        app: kubenews  
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "8080"
+        prometheus.io/path: "/metrics"
     spec:
       containers:
-        - name: kubenews 
-          image: theedu/kube-news:v1
-          env: 
-          - name: DB_DATABASE 
-            value: "kubenews"
-          - name: DB_USERNAME
-            value: "kubenews"
-          - name: DB_PASSWORD
-            value: "Kube#123"
-          - name: DB_HOST
-            value: "postgre"
-           
+      - name: kubenews
+        image: theedu/kube-news:v1
+        env:
+        - name: DB_DATABASE
+          value: "kubenews"
+        - name: DB_USERNAME
+          value: "kubenews"
+        - name: DB_PASSWORD
+          value: "Kube#123"
+        - name: DB_HOST
+          value: "postgre"      
 ---
-
-apiVersion: v1 
+apiVersion: v1
 kind: Service
 metadata:
   name: kube-news
